# drl-aero-optimiser

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  suggested_layout.md
scripts/: quick_test.py
src/: main.py
src/aerofoil_env/: aeropy_interface.py  env.py  naca_aerofoil.py
src/agents/: ppo_agent.py
src/examples/: aeropy_example.py
src/experiments/: evaluate.py  run.py  trial.py
tests/: test_aerofoil_env.py  test_evaluate.py  test_integration.py  test_ppo_agent.py  test_run.py  test_trial.py
